# air-script

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
air/: Cargo.toml  README.md
air-script/: Cargo.toml
air-script/src/: lib.rs  main.rs
air-script/src/cli/: transpile.rs
air-script/tests/: mod.rs
air-script/tests/binary/: binary.rs  mod.rs  test_air.rs
air-script/tests/bitwise/: bitwise.rs  mod.rs  test_air.rs
air-script/tests/buses/: buses.air  buses_complex.air  buses_complex.masm  buses_complex.rs  buses_simple.air  buses_simple.masm  buses_simple.rs  buses_simple_with_evaluators.air  buses_varlen_boundary.air  buses_varlen_boundary.rs  buses_varlen_boundary_both.air  buses_varlen_boundary_both.rs  buses_varlen_boundary_first.air  buses_varlen_boundary_first.rs  buses_varlen_boundary_last.air  buses_varlen_boundary_last.rs  mod.rs  test_air.rs
air-script/tests/codegen/: helpers.rs  masm_with_mir.rs  masm_wo_mir.rs  mod.rs  winterfell_with_mir.rs  winterfell_wo_mir.rs
air-script/tests/constant_in_range/: constant_in_range.rs  mod.rs  test_air.rs
air-script/tests/constants/: constants.air  constants.masm  constants.rs  mod.rs  test_air.rs
air-script/tests/constraint_comprehension/: cc_with_evaluators.air  cc_with_evaluators.masm  constraint_comprehension.air  constraint_comprehension.rs  mod.rs  test_air.rs
air-script/tests/evaluators/: evaluators.rs  mod.rs  test_air.rs
air-script/tests/fibonacci/: fibonacci.air  fibonacci.rs  mod.rs  test_air.rs
air-script/tests/functions/: functions_complex.air  functions_complex.masm  functions_complex.rs  functions_complex_with_mir.masm  functions_complex_with_mir.rs  functions_simple.air  functions_simple.rs  inlined_functions_simple.air  mod.rs  test_air.rs
air-script/tests/helpers/: mod.rs
air-script/tests/indexed_trace_access/: indexed_trace_access.air  indexed_trace_access.masm  indexed_trace_access.rs  mod.rs  test_air.rs
air-script/tests/list_comprehension/: list_comprehension.air  list_comprehension.masm  list_comprehension.rs  list_comprehension_nested.air  list_comprehension_nested.rs  list_comprehension_with_mir.masm  list_comprehension_with_mir.rs  mod.rs  test_air.rs
air-script/tests/list_folding/: list_folding.air  list_folding.masm  list_folding.rs  list_folding_with_mir.masm  list_folding_with_mir.rs  mod.rs  test_air.rs
air-script/tests/periodic_columns/: mod.rs  periodic_columns.rs  test_air.rs
air-script/tests/pub_inputs/: mod.rs  pub_inputs.rs  test_air.rs
air-script/tests/selectors/: mod.rs  selectors.rs  selectors_combine.air  selectors_combine.rs  selectors_with_evaluators.rs  selectors_with_evaluators_with_mir.rs  selectors_with_mir.rs  test_air.rs
air-script/tests/system/: mod.rs  system.rs  test_air.rs
air-script/tests/trace_col_groups/: mod.rs  test_air.rs  trace_col_groups.air  trace_col_groups.masm  trace_col_groups.rs
air-script/tests/variables/: mod.rs  test_air.rs  variables.air  variables.masm  variables.rs
air/src/: lib.rs
air/src/graph/: mod.rs
air/src/ir/: bus.rs  constraints.rs  degree.rs  mod.rs  operation.rs  trace.rs  value.rs
air/src/passes/: expand_buses.rs  mod.rs  translate_from_ast.rs  translate_from_mir.rs
air/src/tests/: access.rs  boundary_constraints.rs  buses.rs  constant.rs  evaluators.rs  list_folding.rs  mod.rs  pub_inputs.rs  selectors.rs  source_sections.rs  trace.rs  variables.rs
air/src/tests/integrity_constraints/: mod.rs
codegen/ace/: Cargo.toml
codegen/ace/src/: builder.rs  circuit.rs  codegen.rs  comparison.rs  dot.rs  encoded.rs  inputs.rs  layout.rs  lib.rs  serialization.rs
codegen/ace/src/masm/: constants.rs  deep_queries.rs  mod.rs  ood_frames.rs  public_inputs.rs  random_coin.rs  utils.rs  verifier.rs
codegen/ace/src/masm/fri_verifier/: helpers.rs  mod.rs
codegen/ace/src/tests/: mod.rs  quotient.rs  random.rs
codegen/ace/tests/: main.rs  utils.rs
codegen/ace/tests/regressions/: Buses.dot  ComplexBoundary.dot  ConstantsAir.dot  Exp.dot  LongTrace.dot  MixedBoundaryAux.dot  MultipleAux.dot  MultipleRows.dot  PublicInput.dot  Random.dot  Simple.dot  SimpleArithmetic.dot  SimpleBoundary.dot  SimpleIntegrityAux.dot  Vector.dot
codegen/winterfell/: Cargo.toml
codegen/winterfell/src/: imports.rs  lib.rs
codegen/winterfell/src/air/: boundary_constraints.rs  buses_helper.rs  graph.rs  mod.rs  periodic_columns.rs  public_inputs.rs  transition_constraints.rs
mir/: Cargo.toml  README.md
mir/derive-ir/: Cargo.toml
mir/derive-ir/src/: builder.rs  lib.rs
mir/src/: lib.rs
mir/src/ir/: bus.rs  graph.rs  link.rs  mir.rs  mod.rs  node.rs  owner.rs  utils.rs
mir/src/ir/nodes/: mod.rs  op.rs  root.rs
mir/src/passes/: bus_op_expand.rs  inlining.rs  mod.rs  translate.rs  unrolling.rs  visitor.rs
mir/src/tests/: access.rs  buses.rs  evaluators.rs  list_comprehension.rs  list_folding.rs  mod.rs  trace.rs  variables.rs
mir/src/tests/integrity_constraints/: mod.rs
mir/src/tests/ir/: inlining2.rs  translate.rs
parser/: Cargo.toml  README.md
parser/src/: lib.rs  symbols.rs
parser/src/ast/: declarations.rs  display.rs  errors.rs  expression.rs  mod.rs  module.rs  statement.rs  trace.rs  types.rs  visit.rs
parser/src/lexer/: mod.rs
parser/src/lexer/tests/: arithmetic_ops.rs  boundary_constraints.rs  constants.rs  evaluator_functions.rs  functions.rs  identifiers.rs  list_comprehension.rs  mod.rs  modules.rs  periodic_columns.rs  pub_inputs.rs  variables.rs
parser/src/parser/: grammar.lalrpop  mod.rs
parser/src/parser/tests/: arithmetic_ops.rs  boundary_constraints.rs  buses.rs  calls.rs  constant_propagation.rs  constants.rs  evaluators.rs  functions.rs  identifiers.rs  inlining.rs  integrity_constraints.rs  list_comprehension.rs  mod.rs  modules.rs  periodic_columns.rs  pub_inputs.rs  selectors.rs  trace_columns.rs  utils.rs  variables.rs
parser/src/sema/: binding_type.rs  errors.rs  import_resolver.rs  mod.rs  scope.rs  semantic_analysis.rs
parser/src/transforms/: constant_propagation.rs  inlining.rs  mod.rs
pass/: Cargo.toml
pass/src/: lib.rs
(+60 files in other folders)
