[package]
name = "air-parser"
version = "0.4.0"
description = "Parser for the AirScript language"
authors.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
categories = ["compilers", "cryptography", "parser-implementations"]
keywords = ["air", "stark", "zero-knowledge", "zkp"]
rust-version.workspace = true
edition.workspace = true

[build-dependencies]
lalrpop = { version = "0.20", default-features = false }

[dependencies]
air-pass = { package = "air-pass", path = "../pass", version = "0.4" }
either = "1.12"
lalrpop-util = "0.20"
lazy_static = "1.4"
miden-diagnostics = { workspace = true }
miden-parsing = "0.1"
petgraph = "0.8"
regex = "1"
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.0"
