[package]
name = "air-pass"
version = "0.4.0"
description = "Reusable compiler pass infrastructure for the AirScript compiler"
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = ["compilers"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
