[package]
name = "air-codegen-ace"
version = "0.4.0"
description = "Code generator from AirScript to the ACE chiplet of Miden's recursive verifier."
authors = ["miden contributors"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/0xMiden/air-script"
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "winterfell", "zero-knowledge", "zkp"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
air-ir = { package = "air-ir", path = "../../air", version = "0.4" }
anyhow = "1.0"
miden-core = { package = "miden-core", version = "0.13", default-features = false }
winter-math = { package = "winter-math", version = "0.12", default-features = false }

[dev-dependencies]
air-parser = { path = "../../parser" }
air-pass = { path = "../../pass" }
mir = { path = "../../mir" }
miden-diagnostics = "0.1"
winter-utils = { version =  "0.12", package = "winter-utils" }
rand = "0.9"
