[package]
name = "air-codegen-winter"
version = "0.5.0"
description = "Winterfell code generator for the AirScript language"
authors.workspace = true
readme = "README.md"
license.workspace = true
repository.workspace = true
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "winterfell", "zero-knowledge", "zkp"]
edition.workspace = true
rust-version.workspace = true

[dependencies]
air-ir = { package = "air-ir", path = "../../air", version = "0.5" }
anyhow = { workspace = true }
codegen = "0.2"
