[package]
name = "air-derive-ir"
version = "0.4.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
pretty_assertions = "1.4"
prettyplease = "0.2"

[lib]
proc-macro = true
