[package]
name = "air-derive-ir"
description = "Macros for MIR representation of the AirScript language"
version = "0.5.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = ["compilers", "cryptography"]
keywords = ["air", "stark", "zero-knowledge", "zkp"]
rust-version.workspace = true
edition.workspace = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
pretty_assertions = "1.4"
prettyplease = "0.2"

[lib]
proc-macro = true
